2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-format.c:
	* src/planner-format.h: New functions to parse an int and float
	that handles thousands separators.
	
	* src/planner-main.c: Use some more modern API for setting the
	window icon.

	* src/planner-resource-dialog.c:
	* src/planner-resource-view.c: Use parsing functions from
	above. Fixes bug #161330.

	* src/planner-window.c: (window_about_cb): Make about box
	transient.

2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (task_tree_finalize): Don't access
	memory after it's been freed.

	* data/dtd/mrproject-0.6.dtd:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/planner2plannerv011.xsl:
	* libplanner/mrp-parser.c: (mpp_write_task_cb): Save "work start"
	and use it to generate more accurate html reports. Update the DTD
	and add the new property to the export filter for planner 0.11
	files. Fixes bug #151483.

2005-02-18  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-xml.c (init): Remove C++ comment.

	* src/planner-ttable-tree.c (ttable_tree_init): Disable search.

	* src/planner-resource-view.c: (resource_view_button_press_event),
	(resource_view_setup_tree_view), (resource_view_popup_menu): *
	src/planner-ttable-tree.c: (ttable_tree_tree_view_popup_menu):
	Position popup menu better. Fixes bug #148736.

2005-02-15  Richard Hult  <richard@imendio.com>

	* data/glade/task-dialog.glade: Disable search.

2005-02-13  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_insert_task): Put new
	tasks at the bottom if there is no parent. Fixes bug #156616.

2005-02-13  Richard Hult  <richard@imendio.com>

	* src/planner-project-properties.c (mpp_calendar_popdown)
	(mpp_calendar_cancel_clicked_cb, mpp_calendar_save_date)
	(mpp_calendar_ok_clicked_cb, mpp_calendar_set_date)
	(mpp_calendar_today_clicked_cb, mpp_calendar_double_click_cb)
	(mpp_grab_on_window, mpp_calendar_popup_helper)